se agrega dtos dentro de gym schedule review payment
